--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.10.0",
-    "next": "14.2.10",
+    "next": "^15.3.2",
     "react": "^18",
     "react-dom": "^18"
   },
